Change log for the PMD Eclipse plugin
-------------------------------------

v3.2.3 - xx/xx/2007

. PMD updated to v4.1
. dependency jars updated
. Fix 1811828 RuntimeException in RuleSetFactory
. Fix NPE on empty rulesets
. Fix UI preference refresh bug
. xml rulesets now use indentation: human readable and easier to modify


----------------------------------------------------------------------------------------
v3.2.2 - 24/06/2007

Runtime
-------
. Add PMD v4.0rc1 (java 1.4 retroweaver support)
. Fix 1671486 Rule set is not serialized/deserialized properly
. Fix 1703589 ConcurrentModificationException in RuleSet.apply
. Fix 1710977 Null Pointer Exception on click of Add Rule (remove the button)
. Fix 1737975 CPD view double-click selection&jump bug
. Remove the embedded PMD documentation and point to the PMD remote site.


----------------------------------------------------------------------------------------
v3.2.1 - 15/02/2007

Runtime
-------
. Fix 1583788 StackOverflowError in rule edit window
. Fix 1641930 Creation of ruleset.xml file causes error in Eclipse
. Fix 1645449 Views broken in 3.2.0 with Eclipse 3.2.1 on Solaris


----------------------------------------------------------------------------------------
v3.2.0 - 15/01/2007

Runtime
-------
. Upgrade to PMD v3.9
. Update and improve overview and outline views
. Refactor CPD views
. Fix major NullPointer and ClassCastException bugs
. Add support for JDK 6.0


----------------------------------------------------------------------------------------
v3.1.7 - 05/10/2006

Runtime
-------
. Upgrade to PMD v3.8
. Fix NPE when searching for quickfixes for rules from project rulesets
. Fix 1541795 (at least it should)
. Fix 1554639 (thanks to Sven Jacob)
. Fix the refreshproblem of the dataflowanomalytable and a bug with overloaded methods in the dataflowview (Thanks to Sven Jacob)
. Fix 1417291 CCE when adding report (eclipse)
. Fix 1470054 Violation Details dlg has OK button which does nothing