@@ -3,7 +3,7 @@
 <plugin
    id="net.sourceforge.pmd.core"
    name="PMD For Eclipse Core Plug-in"
-   version="4.1.0.v200711282033"
+   version="4.1.0.v200712021445"
    provider-name="PMD Development Team"
    class="net.sourceforge.pmd.core.PMDCorePlugin">
 
